version/0.2/_sources/examples.rst.txt
Examples
########

These examples demonstrate the behavior and usage of PyGeometry.

PyGeometry 101 demos
--------------------
These examples demonstrate basic demos of different operations you
can perform with PyGeometry.

.. nbgallery::

    examples/01_getting_started/01_math.mystnb
    examples/01_getting_started/02_units.mystnb
    examples/01_getting_started/03_sketching.mystnb
    examples/01_getting_started/04_modeling.mystnb

Sketching examples
------------------
These examples demonstrate math operations on geometric objects
and sketching capabilities - combined with server-based operations.

.. nbgallery::

    examples/02_sketching/basic_usage.mystnb
    examples/02_sketching/dynamic_sketch_plane.mystnb
    examples/02_sketching/advanced_sketching_gears.mystnb

Modeling examples
-----------------
These examples demonstrate service-based modeling operations.

.. nbgallery::

    examples/03_modeling/add_design_material.mystnb
    examples/03_modeling/plate_with_hole.mystnb
    examples/03_modeling/tessellation_usage.mystnb
    examples/03_modeling/design_organization.mystnb
